@@ -18,6 +18,7 @@ package org.thingsboard.server.common.data.cf.configuration;
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
 import com.fasterxml.jackson.annotation.JsonSubTypes;
+import com.fasterxml.jackson.annotation.JsonSubTypes.Type;
 import com.fasterxml.jackson.annotation.JsonTypeInfo;
 import org.thingsboard.server.common.data.cf.CalculatedFieldLink;
 import org.thingsboard.server.common.data.cf.CalculatedFieldType;
@@ -26,7 +27,6 @@ import org.thingsboard.server.common.data.id.CalculatedFieldId;
 import org.thingsboard.server.common.data.id.EntityId;
 import org.thingsboard.server.common.data.id.TenantId;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -36,9 +36,11 @@ import java.util.stream.Collectors;
         property = "type"
 )
 @JsonSubTypes({
-        @JsonSubTypes.Type(value = SimpleCalculatedFieldConfiguration.class, name = "SIMPLE"),
-        @JsonSubTypes.Type(value = ScriptCalculatedFieldConfiguration.class, name = "SCRIPT"),
-        @JsonSubTypes.Type(value = GeofencingCalculatedFieldConfiguration.class, name = "GEOFENCING")
+        @Type(value = SimpleCalculatedFieldConfiguration.class, name = "SIMPLE"),
+        @Type(value = ScriptCalculatedFieldConfiguration.class, name = "SCRIPT"),
+        @Type(value = GeofencingCalculatedFieldConfiguration.class, name = "GEOFENCING"),
+        @Type(value = AlarmCalculatedFieldConfiguration.class, name = "ALARM"),
+        @Type(value = PropagationCalculatedFieldConfiguration.class, name = "PROPAGATION")
 })
 @JsonIgnoreProperties(ignoreUnknown = true)
 public interface CalculatedFieldConfiguration {
@@ -48,11 +50,11 @@ public interface CalculatedFieldConfiguration {
 
     Output getOutput();
 
-    void validate();
+    default void validate() {}
 
     @JsonIgnore
     default List<EntityId> getReferencedEntities() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     default CalculatedFieldLink buildCalculatedFieldLink(TenantId tenantId, EntityId referencedEntityId, CalculatedFieldId calculatedFieldId) {
@@ -68,6 +70,11 @@ public interface CalculatedFieldConfiguration {
                 .filter(referencedEntity -> !referencedEntity.equals(cfEntityId))
                 .map(referencedEntityId -> buildCalculatedFieldLink(tenantId, referencedEntityId, calculatedFieldId))
                 .collect(Collectors.toList());
+    }
+
+    @JsonIgnore
+    default boolean requiresScheduledReevaluation() {
+        return false;
     }
 
 }
